--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,42 @@
 .App {
   text-align: center;
 }
+.App-header {
+  background-color: dodgerblue;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+body {
+  margin: 0 auto;
+}
+.button {
+  background-color: #5454e4;
+}
+.list-element {
+  min-width: 100vw;
+}
+.search-bar {
+  background-color: white;
+  margin: 2rem;
+
+}
+.search-panel {
+  background-color: navy;
+  padding: 2vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #888;
+  min-width: 100vw;
+}
+.search-results {
+  background-color: yellow;
+  color: black;
+  }
 
 
